ags (2.1.6)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_osc_buffer_util.c to do shift operator using guint64
	* fixed ags_osc_buffer_util_get_rgba() to access using correct index
	* added ags_osc_buffer_util_test.c

ags (2.1.5)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* minor fixes

ags (2.1.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* minor fixes

ags (2.1.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented rename audio in context menu
	* fixed ags-delay recall to listen to AgsSoundcard::tic() event
	* minor improvements

ags (2.1.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing symbol export

ags (2.1.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing symbol

ags (2.1.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsAudio:audio-name property
	* implemented AgsSetDevice task
	* implemented AgsStopSoundcard task
	* implemented AgsStopSequencer task
	* implemented AgsApplySoundConfig task
	* implemented ags_osc_util.c
	* implemented ags_osc_buffer_util.c
	* implemented ags_osc_parser.c
	* implemented ags_osc_builder.c
	* implemented ags_osc_client.c
	* implemented ags_osc_server.c
	* implemented ags_osc_connection.c
	* implemented ags_osc_response.c
	* implemented ags_osc_front_controller.c
	* implemented ags_osc_info_controller.c
	* implemented ags_osc_status_controller.c
	* implemented ags_osc_config_controller.c
	* implemented ags_osc_action_controller.c
	* implemented ags_osc_meter_controller.c
	* implemented ags_osc_node_controller.c
	* implemented ags_osc_renew_controller.c
	* fixed ags_front_controller_do_request() prototype declaration
	* fixed ags_local_factory_controller_create_instance() prototype declaration

ags (2.0.38)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed configure argument enable_run_functional_tests

ags (2.0.37)
